Call super.start() before self starts. Avoid using deprecated newInstance() method. Removed double checked locking pattern - it doesn't work, and it's unnecessary.